force-app/main/default/objects/FinServ__Securities__c/fields/CoinGeckoAPIName__c.field-meta.xml
<CustomField>
    <fullName>CoinGeckoAPIName__c</fullName>
    <description>CoinGecko API Name</description>
    <label>CoinGecko API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>