force-app/main/default/objects/FinServ__Securities__c/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <description>Exchange where the security is listed</description>
    <label>Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DeFi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>